[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/ship_G.png" type="Texture" id=1]
[ext_resource path="res://Assets/ship_C.png" type="Texture" id=2]
[ext_resource path="res://Assets/ship_B.png" type="Texture" id=3]
[ext_resource path="res://UI/Selector.gd" type="Script" id=4]

[node name="Selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Select your ship"
align = 1
valign = 1

[node name="ShipB" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 100.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="ShipC" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="ShipG" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="ShipB" to="." method="_on_ShipB_pressed"]
[connection signal="pressed" from="ShipC" to="." method="_on_ShipC_pressed"]
[connection signal="pressed" from="ShipG" to="." method="_on_ShipG_pressed"]
